Fix title alignment.

--- a/src/style/global.less
+++ b/src/style/global.less
@@ -160,7 +160,12 @@ li {
 		margin-right: auto;
 	}
 
-	h1 {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		text-align: initial;
 	}
 }
